# wikips2

./: readme.md
wiki3/wiki/: README.md
wiki3/wiki/encyclopedia/: urls.py  util.py  views.py
wiki3/wiki/encyclopedia/templates/encyclopedia/: base.html  create.html  edit.html  entry.html  error.html  index.html  search.html
wiki3/wiki/entries/: Atom.md  Jungwon.md  adobe after effects.md  hello.md  very cool thing.md  wikipedia is bad.md
wiki3/wiki/wiki/: pyproject.toml  settings.py  urls.py
